# Sources/PersonApi/src/main/openapi/openapi.yaml
@@ -52,7 +52,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Person'
+                  $ref: '#/components/schemas/PersonDTO'
         400:
           description: Bad request. Check the message for more details.
           content:
@@ -77,7 +77,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Person'
+                $ref: '#/components/schemas/PersonDTO'
         400:
           description: Bad request. Check the message for more details.
           content:
@@ -111,7 +111,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Person'
+                $ref: '#/components/schemas/PersonDTO'
         400:
           description: Bad request. Check the message for more details.
           content:
@@ -119,7 +119,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorInfo'
                 
-    put:
+    patch:
       tags:
         - Person
       summary: Edit information of the person corresponding to the id received in path param.
@@ -144,7 +144,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Person'
+                $ref: '#/components/schemas/PersonDTO'
         400:
           description: Bad request. Check the message for more details.
           content:
@@ -177,7 +177,7 @@ paths:
                 
 components:
   schemas:
-    Person:
+    PersonDTO:
       type: object
       properties:
         id:
